kubernetes/apps/main/observability/grafana/app/route.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-cluster
spec:
  hostnames: ["grafana.${DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: ${DOMAIN}-https
  rules:
    - backendRefs:
        - name: grafana-cluster-service
          namespace: observability
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
